# code-ai-400393

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  body.html  checkError.txt  start.sh
examples/: CMakeLists.txt
examples/3dscene/: CMakeLists.txt  README.md  main.cpp
examples/3dscene/files/: 3DPointsInObjectsSegments.txt  fileCameraParameters.xml
examples/3dscenevideo/: CMakeLists.txt  README.md  main.cpp
examples/add/: CMakeLists.txt  main.cpp
examples/augmentation/: CMakeLists.txt  README.md  main.cpp
examples/calibration/: CMakeLists.txt  main.cpp
examples/clustering/: CMakeLists.txt  README.md  main.cpp  pointsClaster_1001.txt
examples/compareImages/: CMakeLists.txt  README.md  main.cpp
examples/configuration/: CMakeLists.txt  README.md  main.cpp
examples/detectorautotrain/: CMakeLists.txt  README.md  main.cpp
examples/detectorautotrain/onwater/: voc_classes.txt
examples/detectorautotrain/onwater/test/labels/: -2022-01-19-5-13-08_png_jpg.rf.a03afccca2e450a95f04877c75d7b449.xml  10-996758335a938fcc04_jpg.rf.748cc383a101069a5fcb6e6ce9b90e30.xml  10052_jpg.rf.9a04778382b68886cec369715d674a28.xml  10426_jpg.rf.f2339516c33f52ca419674ad123e9565.xml  10927_jpg.rf.b5c0acc0daeefff7960f5908af930c73.xml  1127335_jpg.rf.4003ce0cfc0bf61dae392273b4bada6b.xml  11396_jpg.rf.c05cbcf93fe3f9ec1750e46ced318c9d.xml  1145085_jpg.rf.19770459f3974bf46cae7d6544720b8f.xml  1210069_jpg.rf.6a9a23eda55b6d6e0ffb90ebf547ba72.xml  130604_jpg.rf.4bd49ea5513bac60f478b000273161cb.xml  130627_jpg.rf.0d4f3901c3f214bab499d7f6c575e072.xml  1333612_jpg.rf.1586d3bfca8852648e3a84ca8447492c.xml  1445821_jpg.rf.8fbcb9d077403b137254d9644a788280.xml  1815451_jpg.rf.aa2651cb75e686f58e209bb9ea2993c8.xml  1884634_jpg.rf.9016829ba98f9060bfd9cad406fa1b1f.xml  2122710_jpg.rf.34da9fcc07121fcd9623a4f615d52cc5.xml  2146348_jpg.rf.92e68c01421ddc5b81596681b025d848.xml  2222621_jpg.rf.54b586e10fc1ee0f7e093e50703acb43.xml  (+118 more)
examples/detectorautotrain/underwater/: voc_classes.txt
examples/disparitymap/: CMakeLists.txt  main.cpp
examples/disparitymap/files/: camCalibrarion.xml
examples/emergencydetector/: CMakeLists.txt  README.md  main.cpp
examples/emergencydetector/files/newpipes/: voc_classes.txt
examples/emergencydetector/files/pipes/: README.dataset.txt  README.roboflow.txt
examples/extractfeature/: CMakeLists.txt  README.md  main.cpp
examples/extractfeature/files/: fuseData.yaml
examples/geometry/: CMakeLists.txt  README.md  main.cpp
examples/imgcollection/: CMakeLists.txt  README.md  main.cpp
examples/imgpreprocessing/: CMakeLists.txt  README.md  main.cpp
examples/imgpreprocessing/files/: img01.jfif  img02.jfif  img04.jfif
examples/imread/: CMakeLists.txt  main.cpp
examples/labeler/: CMakeLists.txt  README.md  main.cpp
examples/libfirst/: CMakeLists.txt  main.cpp
examples/morphologyImage/: CMakeLists.txt  README.md  main.cpp
examples/mrcvclass/: CMakeLists.txt  main.cpp
examples/objcourse/: CMakeLists.txt  README.md  main.cpp
examples/opencvinfo/: CMakeLists.txt  main.cpp
examples/readimage/: CMakeLists.txt  main.cpp
examples/recordvideo/: CMakeLists.txt  README.md  main.cpp
examples/roi/: CMakeLists.txt  README.md  main.cpp
examples/roiex/: main.cpp
examples/segmentationTest/: CMakeLists.txt  resnet34.cpp
examples/segmentationTest/images/test/: 44.json  45.json  46.json
examples/segmentationTest/images/train/: 15.json  35.json  37.json
examples/segmentationTraining/: CMakeLists.txt  train.cpp
examples/segmentationtest/: CMakeLists.txt  main.cpp
examples/segmentationtest/images/test/: 47.json
examples/segmentationtest/images/train/: 1.json  10.json  11.json  17.json  21.json  22.json  24.json  28.json  34.json  7.json  9.json
examples/segmentationtrain/: CMakeLists.txt  README.md  main.cpp
examples/sensorsfusion/: CMakeLists.txt  README.md  main.cpp
examples/sensorsfusion/files/: fuseData.yaml  imuLog.csv  usblLog.csv
examples/sizedetection/: CMakeLists.txt  README.md  main.cpp
examples/stereovisionmodule/: CMakeLists.txt  README.md  main.cpp
examples/vae/: CMakeLists.txt  README.md  main.cpp
examples/vae/files/: ship.names
examples/vae/files/result/: result.txt
examples/visionmodule/: CMakeLists.txt  README.md  main.cpp
python/: LICENSE  README.md  pyproject.toml  readme.txt  requirements.txt  requirements_cuda.txt
python/examples/: README.md
python/examples/3dscene/: 3dscene.py
python/examples/augmentation/: augmentation.py
python/examples/clustering/: clustering.py
python/examples/comparing/: comparing.py
python/examples/detector/: detector.py
python/examples/detectorautotrain/: detectorautotrain.py
python/examples/disparity/: disparity.py
python/examples/imgpreprocessing/: imgpreprocessing.py
python/examples/morphologyimage/: morphologyimage.py
python/examples/objcourse/: objcourse.py
python/examples/segmentation/: segmentation.py
python/examples/vae/: vae.py
python/examples/yolov5/: yolov5.py
python/exaples/3dscene/: 3dscene.py
python/exaples/augmentation/: augmentation.py
python/exaples/clustering/: clustering.py
python/exaples/disparity/: disparity.py
python/exaples/roi/: roi.py
python/exaples/segmentation/: segmentation.py
python/mrcv/: __init__.py  mrcv_3dcsene.py  mrcv_augmentation.py  mrcv_clustering.py  mrcv_comparing.py  mrcv_detector.py  mrcv_disparity.py  mrcv_imgpreprocessing.py  mrcv_morphologyimage.py  mrcv_objcourse.py  mrcv_roi.py  mrcv_segmentation.py  mrcv_vae.py  mrcv_yolov5.py
python/src/: readme.txt  trace.py  url.py
tests/: CMakeLists.txt  add_test.cpp  augmentation_test.cpp  clustering_test.cpp  compareimages_test.cpp  configuration_test.cpp  detectorautotrain_test.cpp  disparitymap_test.cpp  emergencydetector_test.cpp  extractfeature_test.cpp  geometry_test.cpp  imgpreprocessing_test.cpp  morphologyimage_test.cpp  objcourse_test.cpp  segmentationtest_test.cpp  segmentationtrain_test.cpp  sensorsfusion_test.cpp
tests/data/configuration/: yolov5s-coco.yaml  yolov5s-hyp.yaml
tests/data/sensorsfusion/: usblLog.csv
(+5543 files in other folders)
