add_subdirectory(add)
add_subdirectory(readimage)
add_subdirectory(opencvinfo)
add_subdirectory(imgcollection)
add_subdirectory(imgpreprocessing)
add_subdirectory(recordvideo)
add_subdirectory(segmentationtest)
add_subdirectory(segmentationtrain)
add_subdirectory(configuration)
add_subdirectory(clustering)
add_subdirectory(objcourse)
add_subdirectory(mrcvclass)
add_subdirectory(detectorautotrain)
add_subdirectory(emergencydetector)
add_subdirectory(augmentation)
add_subdirectory(calibration)
add_subdirectory(detectorautotrain)
add_subdirectory(emergencydetector)
add_subdirectory(disparitymap)
add_subdirectory(roi)
add_subdirectory(3dscene)
add_subdirectory(vae)