[project]
name = "mrcv"
version = "0.1.0"
description = "Marine Robotics Computer Vision"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "opencv-python==4.10.0.84",
    "opencv-contrib-python==4.10.0.84",
    "pyyaml>=6.0.2",
    "torch==2.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mrcv"]